--- a/pages/practices.html
+++ b/pages/practices.html
@@ -80,7 +80,7 @@
               <div class="row">
                 <div class="col-md-2 text-center mb-3 mb-md-0">
                   <div class="practice-icon mx-auto">
-                    <i class="bi bi-flask"></i>
+                    <i class="bi  bi-search"></i>
                   </div>
                 </div>
                 <div class="col-md-10">
